Change syntaxis to comply with Java 8